
-------------------------------------------------------------------



-------------------------------------------------------------------
5.13.2:

-BUG FIX: more PHP v8 edge case "fatal errors" fixes

-BUG FIX: Better Windows 10 support

-BUG FIX: ALL platform download links in upgrade alerts, instead of source code download

-Cron job reliability improvements

-Minor user experience improvements

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
5.13.3:

-BUG FIX: Admin login / reset pages trying to load news feeds / price charts

-BUG FIX: Session support in the Windows Desktop Edition (fixed can't create / reset an admin account)

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
5.13.4:

-BUG FIX: more potential PHPv8 edge case "fatal errors" fixes

-BUG FIX: Strict SSL support in the Windows Desktop Edition (auto-install root certs to: /cache/cacert.pem)

-BUG FIX: Emulated cron / regular cron logic properly merged now (no more missing comms emails on certain logic routines)

-Improved user experience on admin account creation / login / reset form submission pages

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------











