@@ -464,6 +464,7 @@ exit;
 // (and set / reset any needed cron emulation vars)
 if ( $runtime_mode == 'cron' ) {
     
+    
     // EXIT IF CRON IS NOT RUNNING IN THE PROPER CONFIGURATION
     if ( !isset($_GET['cron_emulate']) && $app_edition == 'desktop' || isset($_GET['cron_emulate']) && $app_edition == 'server' ) {
     $ct_gen->log('security_error', 'aborted cron job attempt ('.$_SERVER['REQUEST_URI'].'), INVALID CONFIG');
@@ -472,14 +473,20 @@ if ( $runtime_mode == 'cron' ) {
     exit;
     }
 
+
     // Emulated cron checks / flag as go or not 
     // (WE ALREADY ADJUST EXECUTION TIME FOR CRON RUNTIMES IN INIT.PHP, SO THAT'S ALREADY OK EVEN EMULATING CRON)
-    if ( !isset($_SESSION['cron_emulate_run']) && isset($_GET['cron_emulate']) ) {
+    // (DISABLED if end-user sets $ct_conf['power']['desktop_cron_interval'] to zero)
+    if ( isset($_SESSION['cron_emulate_run']) && isset($_GET['cron_emulate']) && $ct_conf['power']['desktop_cron_interval'] == 0 ) {
+    unset($_SESSION['cron_emulate_run']);
+    $run_cron = false;
+    }
+    elseif ( !isset($_SESSION['cron_emulate_run']) && isset($_GET['cron_emulate']) && $ct_conf['power']['desktop_cron_interval'] > 0 ) {
     $_SESSION['cron_emulate_run'] = time();
     $run_cron = true;
     }
-    // +20 minutes
-    elseif ( isset($_SESSION['cron_emulate_run']) && ($_SESSION['cron_emulate_run'] + 1200) <= time() ) {
+    // +interval
+    elseif ( isset($_SESSION['cron_emulate_run']) && isset($_GET['cron_emulate']) && ( $_SESSION['cron_emulate_run'] + ($ct_conf['power']['desktop_cron_interval'] * 60) ) <= time() ) {
     $_SESSION['cron_emulate_run'] = time();
     $run_cron = true;
     }
@@ -491,12 +498,22 @@ if ( $runtime_mode == 'cron' ) {
     $run_cron = false;
     }
     
+    
     // If emulated cron and it's a no go, exit with a json response (for interface / console log)
     if ( isset($_GET['cron_emulate']) && $run_cron == false ) {
-    $result = array('result' => "Too early to re-run emulated cron job");
+        
+        if ( isset($_SESSION['cron_emulate_run']) ) {
+        $result = array('result' => "Too early to re-run EMULATED cron job");
+        }
+        else {
+        $result = array('result' => "EMULATED cron job is disabled in power user config");
+        }
+    
     echo json_encode($result, JSON_PRETTY_PRINT);
     exit;
+    
     }
+    
 
 }
 
