@@ -232,8 +232,8 @@ header('Content-type: text/html; charset=' . $ct_conf['dev']['charset_default'])
 	pref_bitcoin_mrkts["<?=strtolower( $pref_bitcoin_mrkts_key )?>"] = "<?=strtolower( $pref_bitcoin_mrkts_val )?>";
 	<?php
 	}
-	// If desktop edition, and NOT on login form submission pages, run emulated cron
-	if ( $app_edition == 'desktop' && !$is_login_form ) {
+	// If desktop edition, cron emulation is enabled, and NOT on login form submission pages, run emulated cron
+	if ( $app_edition == 'desktop' && $ct_conf['power']['desktop_cron_interval'] > 0 && !$is_login_form ) {
 	?>	
 	
     // Emulate a cron job every 20 minutes...
